暂时这样，mybatisplus的内置接口没怎么用，光用了sql了

--- a/mp-learn-parent/pom.xml
+++ b/mp-learn-parent/pom.xml
@@ -46,6 +46,18 @@
                     </exclusion>
                 </exclusions>
             </dependency>
+            <!-- 忽略自带的日志框架. -->
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-web</artifactId>
+                <version>${spring-boot.version}</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>org.springframework.boot</groupId>
+                        <artifactId>spring-boot-starter-logging</artifactId>
+                    </exclusion>
+                </exclusions>
+            </dependency>
         </dependencies>
     </dependencyManagement>
     <build>
